--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <div class="topnav">
         <a href="home.html"> HOME</a>
         <a href="contact.html"> CONTACT</a>
-        <a href="aboutas.html"> ABOUT AS</a>
+        <a href="ourjob.html"> OUR JOB</a>
         <a href="buy.html"> BUY</a>
     </div>
 <h1>
