--- a/ourjob.html
+++ b/ourjob.html
@@ -18,56 +18,42 @@
 <h1>
 Our copleted jobs:
 </h1>
-<div class="row">
-    <div class="colomn">
-    <img src="stan1.jpg" alt="Centar Osijek" style="width:100%">
+<div>
+    <img src="stan1.jpg" width="300px" height="180px">
     <h4>
         Centar Osijek
     </h4>
 </div>
-</div>
-<div class="row">
-    <div class="colomn">
-    <img src="stan2.jpg" alt="Retfala" style="width:100%">
+<div>
+    <img src="stan2.jpg" width="300px" height="180px">
     <h4>
         Retfala
     </h4>
 </div>
-</div>
-<div class="row">
-    <div class="colomn">
-    <img src="stan3.jpg" alt="Sjenjak" style="width:100%">
+<div>
+    <img src="stan3.jpg" width="300px" height="180px">
     <h4>
         Sjenjak
     </h4>
 </div>
-</div>
-<div class="row">
-    <div class="colomn">
-    <img src="stan4.jpg" alt="Jug2" style="width:33,33%">
+<div>
+    <img src="stan4.jpg" width="300px" height="180px">
     <h4>
         Jug2
     </h4>
 </div>
-</div>
-<div class="row">
-    <div class="colomn">
-    <img src="stan5.jpg" alt="Gornji grad" style="width:33,33%">
+<div>
+    <img src="stan5.jpg" width="300px" height="180px">
     <h4>
         Gornji grad
     </h4>
 </div>
-</div>
-
-<div class="row">
-    <div class="colomn">
-    <img src="stan6.jpg" alt="Centar" style="width:33,33%">
+<div>
+    <img src="stan6.jpg" width="300px" height="180px">
     <h4>
         Centar
     </h4>
 </div>
-</div>
-
 
 
 </body>
