--- a/home.html
+++ b/home.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <title>
-        REA
-    </title>
+<title>
+    REA
+</title>
+
 <head>
     <link rel="stylesheet" href="style.css">
+
 <body>
     <h1>
-       REA - real estate agency
+        REA - real estate agency
     </h1>
     <div class="topnav">
         <a href="home.html"> HOME</a>
@@ -15,9 +17,37 @@
         <a href="ourjob.html"> OUR JOB</a>
         <a href="buy.html"> BUY</a>
     </div>
-<h1>
-    home
-</h1>
+<br>
+<br>
+    <h1>
+        CHECKED REAL ESTATE. SATISFIED CLIENTS.
+    </h1>
+<br>
+<br>    
+    <p>
+        We are leading experts in real estate brokerage with more than 15 years of successful business. We provide a
+        complete set of services for the purchase, sale, lease and rental of real estate - apartments, houses, business
+        premises and land. Our numerous satisfied clients confirm the quality of our service. We approach everyone
+        conscientiously, responsibly and individually. Contact us with full confidence because your safety is our
+        imperative!
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <p>
+            Author: Valentina Vuković
+        </p>
+    </footer>
 </body>
 </head>
+
 </html>
