--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,13 @@
 <h1>
     contact
 </h1>
+
+<br>
+<footer>
+    <p>
+        Author: Valentina Vuković
+    </p>
+</footer>
 </body>
 </head>
 </html>
