--- a/ourjob.html
+++ b/ourjob.html
@@ -47,7 +47,12 @@
         </h4>
     </div>
 
-
+    <br>
+    <footer>
+        <p>
+            Author: Valentina Vuković
+        </p>
+    </footer>
 </body>
 </head>
 </html>
