--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,43 @@
         <a href="buy.html"> BUY</a>
     </div>
 <h1>
-    contact
+    Contact as:
 </h1>
-
+    <label form="name">
+        Name:
+    </label>
 <br>
+    <input type="name" id="name">
+<br>
+    <label form="mobile">
+        Phone/mobile number:
+    </label>
+<br>
+    <input type="mobile" id="mobile">    
+<br>
+    <label form="mail">
+        E-mail:
+    </label>
+<br>    
+    <input type="mail" id="mail">
+<br>
+    <label form="subject">
+        Subject:
+    </label>
+<br>
+    <textarea id="subject" name="subject">
+    </textarea>
+<br>
+<br>
+//
+<button onclick="myFunction()">Submit</button>
+<script>
+function myFunction() {
+  alert("Thank you!");
+}
+</script>
+//
+
 <footer>
     <p>
         Author: Valentina Vuković
