--- a/home.html
+++ b/home.html
@@ -25,11 +25,11 @@
 <br>
 <br>    
     <p>
-        We are leading experts in real estate brokerage with more than 15 years of successful business. We provide a
+        <i>We are leading experts in real estate brokerage with more than 15 years of successful business. We provide a
         complete set of services for the purchase, sale, lease and rental of real estate - apartments, houses, business
         premises and land. Our numerous satisfied clients confirm the quality of our service. We approach everyone
         conscientiously, responsibly and individually. Contact us with full confidence because your safety is our
-        imperative!
+        imperative!</i>
     </p>
     <br>
     <br>
