--- a/buy.html
+++ b/buy.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <title>
-        REA
-    </title>
+<title>
+    REA
+</title>
 <head>
     <link rel="stylesheet" href="style.css">
 <body>
     <h1>
-       REA - real estate agency
+        REA - real estate agency
     </h1>
     <div class="topnav">
         <a href="home.html"> HOME</a>
@@ -15,16 +15,39 @@
         <a href="ourjob.html"> OUR JOB</a>
         <a href="buy.html"> BUY</a>
     </div>
-<h1>
-    buy
-</h1>
-
+    <h1>
+        Current offer:
+    </h1>
 <br>
-<footer>
-    <p>
-        Author: Valentina Vuković
-    </p>
-</footer>
+    <div class="row">
+        <div class="column">
+            <img src="stan7.jpg" alt="stan7" style="width:100%">
+            <a href="https://www.njuskalo.hr/nekretnine/osijek-centar-grada-2-sobni-stan-73.70m2-vrt-odlicna-lokacija-oglas-35329764 ">
+                OSIJEK, CENTAR GRADA - 79.000,00 €
+            </a>
+        </div>
+        <div class="column">
+            <img src="stan8.jpg" alt="stan8" style="width:100%">
+            <a href="https://www.njuskalo.hr/nekretnine/osijek-tvrda-2-soban-stan-68-m2-1-kat-odlicna-oglas-34445091">
+                OSIJEK, TVRĐA - 77.000,00 €
+            </a>
+        </div>
+        <div class="column">
+            <img src="stan9.jpg" alt="stan9" style="width:100%">
+            <a href="https://www.njuskalo.hr/nekretnine/vijenac-ivana-mestrovica-adaptirani-3-soban-stan-4-kat-oglas-33591436">
+                VIJENAC IVANA MEŠTROVIĆA - 86.000,00€
+            </a>
+        </div>
+    </div>
+<br>
+    <footer>
+        <p>
+            REA - real estate agency, Ulica ulice 55, Osijek 031/123 456
+            <br>
+            <br>
+            Author: Valentina Vuković  
+        </p>
+    </footer>
 </body>
 </head>
 </html>
