--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
         <a href="ourjob.html"> OUR JOB</a>
         <a href="buy.html"> BUY</a>
     </div>
-<h1>
-    Contact as:
-</h1>
+    <h1>
+        Contact as:
+    </h1>
     <label form="name">
         Name:
     </label>
@@ -44,20 +44,20 @@
     </textarea>
 <br>
 <br>
-//
-<button onclick="myFunction()">Submit</button>
-<script>
-function myFunction() {
-  alert("Thank you!");
-}
-</script>
-//
-
-<footer>
-    <p>
-        Author: Valentina Vuković
-    </p>
-</footer>
+    <button onclick="myFunction()">Submit</button>
+    <script>
+        function myFunction() {
+        alert("Thank you!");
+        }
+    </script>
+    <footer>
+        <p>
+            REA - real estate agency, Ulica ulice 55, Osijek 031/123 456
+            <br>
+            <br>
+            Author: Valentina Vuković
+        </p>
+    </footer>
 </body>
 </head>
 </html>
