--- a/home.html
+++ b/home.html
@@ -44,6 +44,9 @@
     <br>
     <footer>
         <p>
+            REA - real estate agency, Ulica ulice 55, Osijek 031/123 456
+            <br>
+            <br>
             Author: Valentina Vuković
         </p>
     </footer>
