--- a/ourjob.html
+++ b/ourjob.html
@@ -18,39 +18,35 @@
     <h1>
         Our copleted jobs:
     </h1>
-    <div>
-        <img src="stan1.jpg" width="300px" height="180px">
-        <h4>
-            Centar Osijek
-        </h4>
-        <img src="stan2.jpg" width="300px" height="180px">
-        <h4>
-        Retfala
-        </h4>
-        <img src="stan3.jpg" width="300px" height="180px">
-        <h4>
-            Sjenjak
-        </h4>
-    </div>
-    <div>
-        <img src="stan4.jpg" width="300px" height="180px">
-        <h4>
-            Jug2
-        </h4>
-        <img src="stan5.jpg" width="300px" height="180px">
-        <h4>
-            Gornji grad
-        </h4>
-        <img src="stan6.jpg" width="300px" height="180px">
-        <h4>
-            Centar
-        </h4>
-    </div>
-
+     <div class="row">
+        <div class="column">
+          <img src="stan1.jpg" alt="stan1" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="stan2.jpg" alt="stan2" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="stan3.jpg" alt="stan3" style="width:100%">
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <img src="stan4.jpg" alt="stan4" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="stan5.jpg" alt="stan5" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="stan6.jpg" alt="stan6" style="width:100%">
+        </div>
+      </div>
     <br>
     <footer>
         <p>
-            Author: Valentina Vuković
+            REA - real estate agency, Ulica ulice 55, Osijek 031/123 456
+            <br>
+            <br>
+            Author: valevuko
         </p>
     </footer>
 </body>
