--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             REA - real estate agency, Ulica ulice 55, Osijek 031/123 456
             <br>
             <br>
-            Author: Valentina Vuković
+            Author: valevuko
         </p>
     </footer>
 </body>
