--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,11 @@
     </title>
 <head>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
     <h1>
        REA - real estate agency
+       <img src="rea.jpg">
     </h1>
     <div class="topnav">
         <a href="home.html"> HOME</a>
@@ -58,7 +60,6 @@
     <footer>
         <p>
             REA - real estate agency, Ulica ulice 55, Osijek 031/123 456
-            <br>
             <br>
             Author: valevuko
         </p>
